--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,10 @@ header {
 }
 
 img {
+    display: flex;
     max-height: 240px;
     max-width: auto;
+    justify-self: center;
 }
 
 .selectionContainer {
@@ -32,4 +34,68 @@ img {
     justify-content: space-evenly;
     margin : 60px 60px 60px 60px;
     font-size: larger
+}
+
+.popup {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    background-color: #fff;
+    border-style: dashed;
+    border-color: #000;
+    border-radius: 6px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #000;
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+}
+
+.openPopup {
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.popup img {
+    max-width: 200px;
+    margin-top: -10%;
+}
+
+.popupMsg {
+    display: flex;
+    align-self: stretch;
+    justify-content: space-evenly;
+}
+
+.popup button{
+    width: 100%;
+    margin-top: 12px;
+    padding: 10px 0;
+    background: #219117;
+    color: #ffffff;
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.playerChoiceHighlight{
+    box-shadow: 0 0 10px 10px #35b0e9;
+}
+
+.computerChoiceHighlight{
+    box-shadow: 0 0 10px 10px #a32121;
+}
+
+.ifDrawHighlight{
+    box-shadow: 0 0 10px 10px #a3217c;
 }
